--- a/estilos/equiproinindex.css
+++ b/estilos/equiproinindex.css
@@ -579,7 +579,63 @@ margin-bottom: 2rem;
    }
    
 
-
+   #message
+   {
+       resize:none;
+       margin-bottom: 1em;
+   }
+   
+   #captchaBackground {
+       height: 220px;
+       width: 250px;
+       background-color: #2d3748;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       flex-direction: column;
+   }
+   
+   
+  
+   #captcha {
+       height: 80%;
+       width: 100%;
+       font-size: 30px;
+       letter-spacing: 3px;
+       margin: auto;
+       display: block;
+       top: 0;
+       bottom: 0;
+       left: 0;
+       right: 0;
+   }
+   .center {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       border: 3px solid  #88001b;
+   }
+   #submitButton {
+       margin-top: 2em;
+       margin-bottom: 2em;
+       background-color: #08e5ff;
+       border: 0px;
+       font-weight: bold;
+   }
+   #refreshButton {
+       background-color: #08e5ff;
+       border: 0px;
+       font-weight: bold;
+   }
+   #textBox {
+       height: 25px;
+   }
+   .incorrectCaptcha {
+       color: #FF0000;
+   }
+   .correctCaptcha {
+       color: #7FFF00;
+   }
 
 
 
